panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__execute__typedef__test_shadow_typedef_in_inner_scope_after_comma.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/execute/typedef/test_shadow_typedef_in_inner_scope_after_comma.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/typedef/test_shadow_typedef_in_inner_scope_after_comma.c"
   (declaration printf~0 `fn(∅: ptr<char const>, ...) -> int` ∅)
   (typedef name `int`)
   (typedef ptr `int`)
   (typedef fptr `int`)
   (typedef xs `int`)
   (function-definition
      main~1 `fn() -> int`
      (compound-statement
         (typedef function `int`)
         (compound-statement
            (declaration a~3 `int` ∅)
            (declaration name~4 `int` 42)
            (declaration b~5 `int` ∅)
            (declaration ptr~6 `ptr<int>` (addressof (name name~4 `int`)))
            (declaration c~7 `int` ∅)
            (declaration function~8 `fn(∅: int) -> int` ∅)
            (declaration d~9 `int` ∅)
            (declaration fptr~10 `ptr<fn(∅: int) -> int>` (name function~8 `fn(∅: int) -> int`))
            (declaration e~11 `int` ∅)
            (declaration xs~12 `array<int; 5>`
               (braced
                  123))
            (expression
               (call (name printf~0 `fn(∅: ptr<char const>, ...) -> int`)
                  (string "%d\n")
                  (name name~4 `int`)))
            (expression (pre-increment (name name~4 `int`)))
            (expression
               (call (name printf~0 `fn(∅: ptr<char const>, ...) -> int`)
                  (string "%d\n")
                  (deref (name ptr~6 `ptr<int>`))))
            (expression
               (call (name printf~0 `fn(∅: ptr<char const>, ...) -> int`)
                  (string "%d\n")
                  (call (name function~8 `fn(∅: int) -> int`)
                     27)))
            (expression
               (call (name printf~0 `fn(∅: ptr<char const>, ...) -> int`)
                  (string "%d\n")
                  (call (name fptr~10 `ptr<fn(∅: int) -> int>`)
                     5)))
            (expression
               (call (name printf~0 `fn(∅: ptr<char const>, ...) -> int`)
                  (string "%d\n")
                  (subscript (name xs~12 `array<int; 5>`) 0))))))
   (function-definition
      function~14 `fn(value: int) -> int`
      (params
         value~16 `int`)
      (compound-statement
         (expression
            (call (name printf~0 `fn(∅: ptr<char const>, ...) -> int`)
               (string "function %d\n")
               (name value~16 `int`)))
         (return (add (name value~16 `int`) 1)))))

----- stderr -----
