panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__execute__typedef__test_shadow_typedef_in_inner_scope_with_value_and_initialiser.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/execute/typedef/test_shadow_typedef_in_inner_scope_with_value_and_initialiser.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/typedef/test_shadow_typedef_in_inner_scope_with_value_and_initialiser.c"
   (declaration printf~0 `fn(∅: ptr<char const>, ...) -> int` ∅)
   (function-definition
      main~1 `fn() -> int`
      (compound-statement
         (compound-statement
            (typedef name `int`)
            (compound-statement
               (declaration name~3 `long` (negate 42))
               (expression
                  (call (name printf~0 `fn(∅: ptr<char const>, ...) -> int`)
                     (string "%ld\n")
                     (name name~3 `long`))))
            (declaration x~4 `int` 123)
            (expression
               (call (name printf~0 `fn(∅: ptr<char const>, ...) -> int`)
                  (string "%d\n")
                  (name x~4 `int`))))
         (declaration name~5 `int` 42)
         (return (name name~5 `int`)))))

----- stderr -----
