panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__execute__typedef__test_typedef_array_decay.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/execute/typedef/test_typedef_array_decay.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/typedef/test_typedef_array_decay.c"
   (declaration printf~0 `fn(∅: ptr<char const>, ...) -> int` ∅)
   (typedef i32 `int`)
   (typedef array_with_length `array<int; 42>`)
   (typedef array_with_unknown_length `array<int; ∅>`)
   (typedef pointer `ptr<int>`)
   (function-definition
      check_pointer_decay_of_typedefd_arrays~1 `fn(xs: array<int; 42>) -> void`
      (params
         xs~3 `array<int; 42>`)
      (compound-statement
         (expression
            (call (name printf~0 `fn(∅: ptr<char const>, ...) -> int`)
               (string "%zu\n")
               (sizeof (name xs~3 `array<int; 42>`))))
         (expression
            (generic
               (name xs~3 `array<int; 42>`)
               (assoc `ptr<int>` 0)))
         (expression
            (generic
               (name xs~3 `array<int; 42>`)
               (assoc `ptr<int>` 0)))
         (expression
            (generic
               (name xs~3 `array<int; 42>`)
               (assoc `ptr<int>` 0)))))
   (function-definition
      check_pointer_decay_of_typedefd_arrays_with_unknown_length~4 `fn(xs: array<int; ∅>) -> void`
      (params
         xs~6 `array<int; ∅>`)
      (compound-statement
         (expression
            (call (name printf~0 `fn(∅: ptr<char const>, ...) -> int`)
               (string "%zu\n")
               (sizeof (name xs~6 `array<int; ∅>`))))
         (expression
            (generic
               (name xs~6 `array<int; ∅>`)
               (assoc `ptr<int>` 0)))
         (expression
            (generic
               (name xs~6 `array<int; ∅>`)
               (assoc `ptr<int>` 0)))
         (expression
            (generic
               (name xs~6 `array<int; ∅>`)
               (assoc `ptr<int>` 0)))))
   (function-definition
      main~7 `fn(∅: int, ∅: ptr<ptr<char>>) -> int`
      (params
         main.unnamed_parameter.0~9 `int`
         main.unnamed_parameter.1~10 `ptr<ptr<char>>`)
      (compound-statement
         (declaration a~11 `array<int; ∅>`
            (braced
               1
               2
               3))
         (declaration b~12 `array<int; ∅>`
            (braced
               1
               2
               3
               4))
         (expression
            (call (name check_pointer_decay_of_typedefd_arrays~1 `fn(xs: array<int; 42>) -> void`)
               (name a~11 `array<int; ∅>`)))
         (expression
            (call (name check_pointer_decay_of_typedefd_arrays~1 `fn(xs: array<int; 42>) -> void`)
               (name b~12 `array<int; ∅>`)))
         (expression
            (call (name check_pointer_decay_of_typedefd_arrays_with_unknown_length~4 `fn(xs: array<int; ∅>) -> void`)
               (name a~11 `array<int; ∅>`)))
         (expression
            (call (name check_pointer_decay_of_typedefd_arrays_with_unknown_length~4 `fn(xs: array<int; ∅>) -> void`)
               (name b~12 `array<int; ∅>`)))
         (expression
            (call (name printf~0 `fn(∅: ptr<char const>, ...) -> int`)
               (string "%zu %zu\n")
               (lengthof (name a~11 `array<int; ∅>`))
               (lengthof (name b~12 `array<int; ∅>`)))))))

----- stderr -----
