panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__execute__typedef__test_typedef_in_function_scope_does_not_leak.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/execute/typedef/test_typedef_in_function_scope_does_not_leak.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/typedef/test_typedef_in_function_scope_does_not_leak.c"
   (declaration printf~0 `fn(∅: ptr<char const>, ...) -> int` ∅)
   (function-definition
      f~1 `fn() -> void`
      (compound-statement
         (typedef name `char const`)
         (declaration x~3 `char const` 'a')
         (expression
            (call (name printf~0 `fn(∅: ptr<char const>, ...) -> int`)
               (string "%c\n")
               (name x~3 `char const`)))))
   (function-definition
      main~4 `fn() -> int`
      (compound-statement
         (expression (call (name f~1 `fn() -> void`)))
         (declaration name~6 `int` 42)
         (return (name name~6 `int`)))))

----- stderr -----
