panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__execute__typedef__test_typedef_of_function_type.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/execute/typedef/test_typedef_of_function_type.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/typedef/test_typedef_of_function_type.c"
   (declaration puts~0 `fn(∅: ptr<char const>) -> int` ∅)
   (typedef FunctionPtr `fn(∅: ptr<char const>) -> int`)
   (function-definition
      main~1 `fn() -> int`
      (compound-statement
         (declaration ptr~3 `ptr<fn(∅: ptr<char const>) -> int>` (name puts~0 `fn(∅: ptr<char const>) -> int`))
         (expression
            (call (name ptr~3 `ptr<fn(∅: ptr<char const>) -> int>`)
               (string "hello world"))))))

----- stderr -----
