panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__execute__typedef__test_use_globally_typedefd_name_as_parameter_name.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/execute/typedef/test_use_globally_typedefd_name_as_parameter_name.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/typedef/test_use_globally_typedefd_name_as_parameter_name.c"
   (typedef a `int`)
   (typedef b `int`)
   (function-definition
      f~0 `fn(a: int, b: ptr<int>) -> int`
      (params
         a~2 `int`
         b~3 `ptr<int>`)
      (compound-statement
         (return (add (name a~2 `int`) (deref (name b~3 `ptr<int>`))))))
   (function-definition
      main~4 `fn() -> int`
      (compound-statement
         (declaration x~6 `int` 2)
         (return
            (call (name f~0 `fn(a: int, b: ptr<int>) -> int`)
               40
               (addressof (name x~6 `int`)))))))

----- stderr -----
