panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__execute__typedef__test_use_typedefd_name_as_parameter_name_and_use_typedef.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/execute/typedef/test_use_typedefd_name_as_parameter_name_and_use_typedef.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/typedef/test_use_typedefd_name_as_parameter_name_and_use_typedef.c"
   (function-definition
      main~0 `fn() -> int`
      (compound-statement
         (typedef a `int`)
         (declaration f~2 `fn(a: int) -> int` ∅)
         (declaration b~3 `int` 42)
         (return
            (add (name b~3 `int`)
               (call (name f~2 `fn(a: int) -> int`)
                  (name b~3 `int`))))))
   (function-definition
      f~4 `fn(a: int) -> int`
      (params
         a~6 `int`)
      (compound-statement
         (return (name a~6 `int`)))))

----- stderr -----
